--- a/src/js/component/loading/index.less
+++ b/src/js/component/loading/index.less
@@ -58,7 +58,7 @@
             background: rgba(0, 0, 0, 0)
         }
         .@{px-loading}--box{
-            display: block;
+            display: inline;
         }
         .@{px-loading}--children{
             opacity: .7;
