--- a/src/less/global/var.less
+++ b/src/less/global/var.less
@@ -26,6 +26,7 @@
 @px-confirm: ~'@{prefix}-confirm';
 @px-modal: ~'@{prefix}-modal';
 @px-scroll: ~'@{prefix}-scroll';
+@px-scrollbar: ~'@{prefix}-scrollbar'; // 滚动条
 @px-super-dom: ~'@{prefix}-super-dom';
 @px-tree: ~'@{prefix}-tree';
 @px-checkbox: ~'@{prefix}-checkbox';
