--- a/src/js/component/modal/modal.less
+++ b/src/js/component/modal/modal.less
@@ -56,7 +56,7 @@
         .dpr(@fs2);
         padding: @u*20;
         min-height: @u*100;
-        max-height: 61.8%; // 又是完美黄金比例！！
+        // max-height: 61.8%; // 又是完美黄金比例！！
         word-wrap: break-word;
         box-sizing: border-box;
         flex: 1;
