--- a/src/js/component/tree/search/index.less
+++ b/src/js/component/tree/search/index.less
@@ -4,6 +4,7 @@
 @ch1:#EFF9FF;
 // 搜索
 .@{px-tree}-search{
+    background: #fff;
     // position: relative;
     position: static;
     border: 1px solid @bc1;
