--- a/src/less/global/var.less
+++ b/src/less/global/var.less
@@ -32,3 +32,4 @@
 @px-checkbox: ~'@{prefix}-checkbox';
 @px-loading: ~'@{prefix}-loading';
 @px-message: ~'@{prefix}-message';
+@px-watermark: ~'@{prefix}-watermark'; // 水印
