新增日历相关目录和配置

--- a/src/less/global/var.less
+++ b/src/less/global/var.less
@@ -33,3 +33,5 @@
 @px-loading: ~'@{prefix}-loading';
 @px-message: ~'@{prefix}-message';
 @px-watermark: ~'@{prefix}-watermark'; // 水印
+@px-datePicker: ~'@{prefix}-datePicker'; // 选择日历控件
+@px-calendar: ~'@{prefix}-calendar'; // 日历
