--- a/src/less/global/var.less
+++ b/src/less/global/var.less
@@ -35,3 +35,5 @@
 @px-watermark: ~'@{prefix}-watermark'; // 水印
 @px-datePicker: ~'@{prefix}-datePicker'; // 选择日历控件
 @px-calendar: ~'@{prefix}-calendar'; // 日历
+@px-dropdown: ~'@{prefix}-dropdown'; // 下拉菜单
+@px-menu: ~'@{prefix}-menu'; // 导航菜单
