1.更新字体文件（新增mobile图标

--- a/src/js/component/icon/font/demo_symbol.html
+++ b/src/js/component/icon/font/demo_symbol.html
@@ -147,6 +147,14 @@
                     <div class="fontclass">#icon-loading</div>
                 </li>
             
+                <li>
+                    <svg class="icon" aria-hidden="true">
+                        <use xlink:href="#icon-mobile"></use>
+                    </svg>
+                    <div class="name">外部联系人</div>
+                    <div class="fontclass">#icon-mobile</div>
+                </li>
+            
         </ul>
 
 
