--- a/src/js/component/icon/font/demo_unicode.html
+++ b/src/js/component/icon/font/demo_unicode.html
@@ -122,6 +122,12 @@
                     <div class="code">&amp;#xe601;</div>
                 </li>
             
+                <li>
+                <i class="icon iconfont">&#xe72b;</i>
+                    <div class="name">外部联系人</div>
+                    <div class="code">&amp;#xe72b;</div>
+                </li>
+            
         </ul>
         <h2 id="unicode-">unicode引用</h2>
         <hr>
