--- a/src/js/component/icon/index.less
+++ b/src/js/component/icon/index.less
@@ -31,8 +31,6 @@
 // }
 
 
-.@{px-icon}-loading:before { content: "\e601"; }
-
 .@{px-icon}-search:before { content: "\e628"; }
 
 .@{px-icon}-folder-open:before { content: "\e6c2"; }
@@ -55,8 +53,12 @@
 
 .@{px-icon}-caret-down:before { content: "\e653"; }
 
-.@{px-icon}-close:before { content: "\e64a"; }
-
 .@{px-icon}-check:before { content: "\e655"; }
 
 .@{px-icon}-minus:before { content: "\e657"; }
+
+.@{px-icon}-close:before { content: "\e64a"; }
+
+.@{px-icon}-loading:before { content: "\e601"; }
+
+.@{px-icon}-mobile:before { content: "\e72b"; }
