--- a/src/js/component/icon/font/demo_fontclass.html
+++ b/src/js/component/icon/font/demo_fontclass.html
@@ -102,6 +102,12 @@
                     <div class="fontclass">.icon-loading</div>
                 </li>
             
+                <li>
+                <i class="icon iconfont icon-mobile"></i>
+                    <div class="name">外部联系人</div>
+                    <div class="fontclass">.icon-mobile</div>
+                </li>
+            
         </ul>
 
         <h2 id="font-class-">font-class引用</h2>
