选人控件加载样式

--- a/src/js/component/tree/index.less
+++ b/src/js/component/tree/index.less
@@ -4,8 +4,15 @@
 @ch1: #EFF9FF;
 // 头像
 // .tree-main{
-
-
+.@{px-tree} {
+    &--loading {
+        width: @u*22;
+        .@{px-loading}--box{
+            top: 50%;
+        }
+    }
+}
+    
 // }
 // 大外框
 .tree-fixed{
