--- a/src/js/component/menu/item.less
+++ b/src/js/component/menu/item.less
@@ -15,6 +15,9 @@
         &:hover{
             background-color: @c4;
             color: #fff;
+            >a{
+                color: #fff; 
+            }
         }
         >a {
             &::before {
