--- a/src/js/component/menu/item.less
+++ b/src/js/component/menu/item.less
@@ -12,7 +12,7 @@
         white-space: nowrap;
         cursor: pointer;
         transition: all .3s;
-        &:hover{
+        &:hover,&__activ{
             background-color: @c4;
             color: #fff;
             >a{
