--- a/src/js/component/tree/index.less
+++ b/src/js/component/tree/index.less
@@ -350,6 +350,7 @@
             overflow: hidden;
             p{
                 .slh();
+                line-height: 1.2;
             }
             small{
                 margin:0 @u*4;
