--- a/src/js/component/tree/index.less
+++ b/src/js/component/tree/index.less
@@ -1,389 +1,384 @@
-@import "~global/var.less";
-@import "~global/mixins.less";
+@import '~global/var.less';
+@import '~global/mixins.less';
 
-@ch1: #EFF9FF;
+@ch1: #eff9ff;
 // 头像
 // .tree-main{
 .@{px-tree} {
-    
-    &--loading {
-        width: @u*22;
-        .@{px-loading}--box{
-            top: 50%;
-        }
+  &--loading {
+    width: @u*22;
+    .@{px-loading}--box {
+      top: 50%;
     }
+  }
 }
-    
+
 // }
 // 大外框
-.tree-fixed{
-    position: fixed;
-    width: 100%;
-    height: 100%;
-    z-index: 100000;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    top: 0;
-    left: 0;
-    background: rgba(0, 0, 0, 0.1);
+.tree-fixed {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  z-index: 100000;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  top: 0;
+  left: 0;
+  background: rgba(0, 0, 0, 0.1);
 }
 // 主框
-.tree-main{
-    *{
-        box-sizing: border-box;
-    }
-    line-height: 1;
-    color: @c1;
-    font-size: 12px;
-    width: @u*661;
-    border-radius: @u*5;
-    background: #fff;
-    overflow: hidden;
-    border: 1px solid @c3;
-    box-shadow: 0 0 @u*5 rgba(0, 0, 0, 0.2);
-    
+.tree-main {
+  * {
+    box-sizing: border-box;
+  }
+  line-height: 1;
+  color: @c1;
+  font-size: 12px;
+  width: @u*661;
+  border-radius: @u*5;
+  background: #fff;
+  overflow: hidden;
+  border: 1px solid @c3;
+  box-shadow: 0 0 @u*5 rgba(0, 0, 0, 0.2);
 }
 // 头
-.tree-header{
-    text-align: center;
-    height: @u*52;
-    background: @bgc1;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    h2{
-        flex: 1;
-        font-size: @fs2;
-        color: @c1;
-        font-weight: bold;
+.tree-header {
+  text-align: center;
+  height: @u*52;
+  background: @bgc1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  h2 {
+    flex: 1;
+    font-size: @fs2;
+    color: @c1;
+    font-weight: bold;
+  }
+  .header-right,
+  .header-left {
+    padding: @u*8;
+  }
+  .header-right {
+    cursor: pointer;
+    &:hover {
+      color: @error-c;
     }
-    .header-right,.header-left{
-        padding: @u*8;
+    .@{px-icon} {
+      .dpr(30);
     }
-    .header-right{
-        cursor: pointer;
-        &:hover{
-            color: @error-c;
-        }
-        .@{px-icon}{
-            .dpr(30);
-        }
-    }
-    
+  }
 }
-@box-lw:@u*320;
-@box-p:@u*10;
+@box-lw: @u*320;
+@box-p: @u*10;
 // 中间box
-.tree-box{
+.tree-box {
+  position: relative;
+  @h: @u*398;
+  @lw: @box-lw;
+  display: flex;
+  height: @h;
+  border-top: 1px solid @c3;
+  border-bottom: 1px solid @c3;
+  // 搜索框
+
+  // 左右2边内容
+  &-left,
+  &-right {
     position: relative;
-    @h:@u*398;
-    @lw:@box-lw;
+    // padding: @box-p 0 0 ;
+    overflow: hidden;
     display: flex;
-    height: @h;
-    border-top: 1px solid @c3;
-    border-bottom: 1px solid @c3;
-    // 搜索框
-    
-    // 左右2边内容
-    &-left,&-right{
-        position: relative;
-        // padding: @box-p 0 0 ;
-        overflow: hidden;
-        display: flex;
-        flex-direction: column;
-        .scroll{
-            flex: 1;
-            overflow: auto;
-            &::-webkit-scrollbar{
-                width: @u*8;
-                height: @u*8;
-            }
-            &::-webkit-scrollbar-thumb{
-                min-height: @u*10;
-                border-radius:@u*100;
-                background: rgba(204, 204, 204, 0.56);
-                &:hover{
-                    background: rgba(204, 204, 204, 1);
-                }
-            }
+    flex-direction: column;
+    .scroll {
+      flex: 1;
+      overflow: auto;
+      &::-webkit-scrollbar {
+        width: @u*8;
+        height: @u*8;
+      }
+      &::-webkit-scrollbar-thumb {
+        min-height: @u*10;
+        border-radius: @u*100;
+        background: rgba(204, 204, 204, 0.56);
+        &:hover {
+          background: rgba(204, 204, 204, 1);
         }
+      }
     }
-    &-left{
-        width: @lw;
-        padding-top: @box-p;
-        border-right: 1px solid @c3;
-        flex: 0 0 @lw;
-        &-top{
-            padding: 0 @box-p;
-            >p{
-                line-height: @u*32;
-            }
-        }
-        >.@{px-loading}{
-            display: flex;
-            flex: 1;
-            .scroll{
-                // max-height: calc(~'100% - '@u*32*2);
-                height: 100%;
-                // flex: 1;
-                // overflow: auto;
-            }
-        }
-        
+  }
+  &-left {
+    width: @lw;
+    padding-top: @box-p;
+    border-right: 1px solid @c3;
+    flex: 0 0 @lw;
+    &-top {
+      padding: 0 @box-p;
+      > p {
+        line-height: @u*32;
+      }
     }
-    &-right{
-        flex: 1;
-        margin: @box-p 0;
-        overflow: hidden;
-        &-top{
-            height: @u*32;
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            margin-bottom: @u*10;
-            padding: 0 @box-p;
-            .explain{
-                color: @c3;
-                b{
-                    margin-left: @u*10;
-                    color: @c1;
-                }
-            }
-            .operation{
-                color: @c4;
-                cursor: pointer;
-            }
-        }
-        // .scroll{
-        //     height: 100%;
-        //     // margin-right: @u*-5;
-        // }
+    > .@{px-loading} {
+      display: flex;
+      flex: 1;
+      .scroll {
+        // max-height: calc(~'100% - '@u*32*2);
+        height: 100%;
+        // flex: 1;
+        // overflow: auto;
+      }
     }
-    
+  }
+  &-right {
+    flex: 1;
+    margin: @box-p 0;
+    overflow: hidden;
+    &-top {
+      height: @u*32;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      margin-bottom: @u*10;
+      padding: 0 @box-p;
+      .explain {
+        color: @c3;
+        b {
+          margin-left: @u*10;
+          color: @c1;
+        }
+      }
+      .operation {
+        color: @c4;
+        cursor: pointer;
+      }
+    }
+    // .scroll{
+    //     height: 100%;
+    //     // margin-right: @u*-5;
+    // }
+  }
 }
 // 底部
-.tree-bottom{
-    min-height: @u*50;
-    margin-bottom: @u*-5;
-    padding: @u*5;
+.tree-bottom {
+  min-height: @u*50;
+  margin-bottom: @u*-5;
+  padding: @u*5;
+  display: flex;
+  align-items: center;
+  flex-direction: row-reverse;
+  flex-wrap: wrap;
+  > button {
+    padding: 0 @u*10;
+    min-width: @u*90;
+    margin: @u*5;
+  }
+}
+// 一些组件--------------------------------
+.tree-checkbox {
+  .@{px-icon} {
+    .dpr(18);
+    color: @c4;
+  }
+}
+.tree-avatar {
+  @w: @u*22;
+  @h: @u*22;
+  display: flex;
+  > * {
+    margin-left: @u*5;
+    flex: 1 1 @w;
+    &:first-child {
+      margin-left: 0;
+    }
+  }
+  &--icon {
+    .dpr(22);
+    width: @w;
+    height: @h;
+    color: @c4;
+  }
+  &--img {
+    width: @w;
+    height: @h;
+    display: none;
+    &&__show {
+      display: block;
+    }
+  }
+  &--name {
+    width: @w;
+    height: @h;
+    border-radius: @u*3;
+    overflow: hidden;
+    text-align: center;
+    line-height: @h;
+    color: #fff;
     display: flex;
     align-items: center;
-    flex-direction:row-reverse;
-    flex-wrap: wrap;
-    >button{
-        padding: 0 @u*10;
-        min-width: @u*90;
-        margin: @u*5;
-    }
-}   
-// 一些组件--------------------------------
-.tree-checkbox{
-    .@{px-icon} {
-        .dpr(18);
-        color: @c4;
-    }
-}
-.tree-avatar{
-    @w: @u*22;
-    @h: @u*22;
-    display: flex;
-    >*{
-        margin-left: @u*5;
-        flex: 1 1 @w;
-        &:first-child{
-            margin-left:0;
-        }
-    }
-    &--icon{
-        .dpr(22);
-        width: @w;
-        height: @h;
-        color: @c4;
-    }
-    &--img{
-        width: @w;
-        height: @h;
-        display: none;
-        &&__show{
-            display: block;
-        }
-    }
-    &--name {
-        width: @w;
-        height: @h;
-        border-radius: @u*3;
-        overflow: hidden;
-        text-align: center;
-        line-height: @h;
-        color: #fff;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-    }
+    justify-content: center;
+  }
 }
 // 选中人样式
-.tree-selected{
-    &-ul{
-        padding: 0;
-        margin: 0;
-        >li{
-            display: flex;
-            align-items: center;
-            padding: 0 @box-p;
-            height: @u*30;
-            transition: 0.2s;
-            &:hover{
-                background-color: @ch1;
-            }
-            >img{
-                width: @u*22;
-                height: @u*22;
-                margin-right: @u*10;
-            }
-            
-            >span{
-                cursor: pointer;
-                transition: 0.2s;
-                &:hover{
-                    color: @error-c;
-                }
-                .@{px-icon} {
-                    .dpr(18);
-                }
-            }
+.tree-selected {
+  &-ul {
+    padding: 0;
+    margin: 0;
+    > li {
+      display: flex;
+      align-items: center;
+      padding: 0 @box-p;
+      height: @u*30;
+      transition: 0.2s;
+      &:hover {
+        background-color: @ch1;
+      }
+      > img {
+        width: @u*22;
+        height: @u*22;
+        margin-right: @u*10;
+      }
+
+      > span {
+        cursor: pointer;
+        transition: 0.2s;
+        &:hover {
+          color: @error-c;
         }
-    }
-    &-front{
-        margin-right: @u*5;
-    }
-    &-name{
-        display: flex;
-        align-items: center;
-        flex:1;
-        >p{
-            .slh();
-            line-height: 1.2;
+        .@{px-icon} {
+          .dpr(18);
         }
-        >small {
-            margin:0 @u*4;
-            color: @c3;
-            display: inherit
-        }
+      }
     }
-    
+  }
+  &-front {
+    margin-right: @u*5;
+  }
+  &-name {
+    display: flex;
+    align-items: center;
+    flex: 1;
+    > p {
+      .slh();
+      line-height: 1.2;
+    }
+    > small {
+      margin: 0 @u*4;
+      color: @c3;
+      display: inherit;
+    }
+  }
 }
 
 // 联系人样式
-.tree-children{
-    &-ul{
-        
-        // 正常情况
-        &.type-normal{ 
-            >.tree-children-info{
-                &:hover{
-                    &::after{
-                        content: '';
-                        position: absolute;
-                        background: @ch1;
-                        right: 0;
-                        // top: 0;
-                        width: 100%;
-                        height: 32px;
-                        z-index: 0;
-                    }
-                }
-            }
-            
+.tree-children {
+  &-ul {
+    // 正常情况
+    &.type-normal {
+      > .tree-children-info {
+        &:hover {
+          &::after {
+            content: '';
+            position: absolute;
+            background: @ch1;
+            right: 0;
+            // top: 0;
+            width: 100%;
+            height: 32px;
+            z-index: 0;
+          }
         }
-        // 不可选
-        &.type-immutable{
-            >.tree-children-info,>.tree-children-info{
-                &::after{
-                    content: '';
-                    position: absolute;
-                    background: rgba(255, 255, 255, 0.5);
-                    right: 0;
-                    // top: 0;
-                    width: 100%;
-                    height: 32px;
-                    z-index: 1;
-                    cursor: not-allowed;
-                }
-            }
-        }
-        // 第一层
-        &.layer-0{
-            padding-left: @u*10;
-            // >.tree-children-son{
-            //     padding-left: 0;
-            // }
-        }
+      }
     }
-    &-info{
-        height: @u*32;
+    // 不可选
+    &.type-immutable {
+      > .tree-children-info,
+      > .tree-children-info {
+        &::after {
+          content: '';
+          position: absolute;
+          background: rgba(255, 255, 255, 0.5);
+          right: 0;
+          // top: 0;
+          width: 100%;
+          height: 32px;
+          z-index: 1;
+          cursor: not-allowed;
+        }
+      }
+    }
+    // 第一层
+    &.layer-0 {
+      padding-left: @u*10;
+      // >.tree-children-son{
+      //     padding-left: 0;
+      // }
+    }
+  }
+  &-info {
+    height: @u*32;
+    display: flex;
+    align-items: center;
+    // position: relative;
+    cursor: pointer;
+    padding-right: @box-p;
+    > * {
+      position: relative;
+      z-index: 1;
+    }
+    &-front {
+      height: 100%;
+      display: flex;
+      align-items: center;
+      .tree-icon-expand {
+        .dpr(22);
+        color: @c3;
+        // padding: 0 @u*5 0 0;
+        width: @u*22;
+        height: 100%;
         display: flex;
         align-items: center;
-        // position: relative;
-        cursor: pointer;
-        padding-right: @box-p;
-        >*{
-            position: relative;
-            z-index: 1;
+        justify-content: center;
+        box-sizing: content-box;
+        transition: transform 0.2s;
+        &.close-type {
+          transform: rotateZ(-90deg);
         }
-        &-front {
-            height:100%;
-            display: flex;
-            align-items: center;
-            .tree-icon-expand{
-                .dpr(22);
-                color: @c3;
-                // padding: 0 @u*5 0 0;
-                width: @u*22;
-                height:100%;
-                display: flex;
-                align-items: center;
-                justify-content: center;
-                box-sizing: content-box;
-                transition: transform 0.2s;
-                &.close-type{
-                    transform: rotateZ(-90deg);
-                }
-            }
-            .tree-avatar{
-                margin-right:@u*5;
-            }
-        }
-        
-        &-name{
-            flex: 1;
-            display: flex;
-            align-items: center;
-            overflow: hidden;
-            p{
-                .slh();
-                line-height: 1.2;
-                margin: 0;
-            }
-            small{
-                margin:0 @u*4;
-                color: @c3;
-                display: inherit
-            }
-        }
+      }
+      .tree-avatar {
+        margin-right: @u*5;
+      }
     }
-    &-son{
-        padding-left: @u*(22);
+
+    &-name {
+      flex: 1;
+      display: flex;
+      align-items: center;
+      overflow: hidden;
+      p {
+        .slh();
+        line-height: 1.2;
+        margin: 0;
+      }
+      small {
+        margin: 0 @u*4;
+        color: @c3;
+        display: inherit;
+      }
     }
-    &-box{
-        position: relative;
-    }
-    &-hover {
-        width: 100%;
-        position: absolute;
-        top:0;
-        left: 0;
-        // background: @ch1;
-        // transition: transform 0.05s;
-    }
+  }
+  &-son {
+    padding-left: @u* (22);
+  }
+  &-box {
+    position: relative;
+  }
+  &-hover {
+    width: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    // background: @ch1;
+    // transition: transform 0.05s;
+  }
 }
