--- a/src/js/component/icon/font/demo_symbol.html
+++ b/src/js/component/icon/font/demo_symbol.html
@@ -155,6 +155,38 @@
                     <div class="fontclass">#icon-mobile</div>
                 </li>
             
+                <li>
+                    <svg class="icon" aria-hidden="true">
+                        <use xlink:href="#icon-break"></use>
+                    </svg>
+                    <div class="name">break</div>
+                    <div class="fontclass">#icon-break</div>
+                </li>
+            
+                <li>
+                    <svg class="icon" aria-hidden="true">
+                        <use xlink:href="#icon-cloud"></use>
+                    </svg>
+                    <div class="name">cloud</div>
+                    <div class="fontclass">#icon-cloud</div>
+                </li>
+            
+                <li>
+                    <svg class="icon" aria-hidden="true">
+                        <use xlink:href="#icon-sort"></use>
+                    </svg>
+                    <div class="name">sort</div>
+                    <div class="fontclass">#icon-sort</div>
+                </li>
+            
+                <li>
+                    <svg class="icon" aria-hidden="true">
+                        <use xlink:href="#icon-tissue"></use>
+                    </svg>
+                    <div class="name">icon-tissue</div>
+                    <div class="fontclass">#icon-tissue</div>
+                </li>
+            
         </ul>
 
 
