--- a/src/js/component/icon/font/demo_unicode.html
+++ b/src/js/component/icon/font/demo_unicode.html
@@ -128,6 +128,30 @@
                     <div class="code">&amp;#xe72b;</div>
                 </li>
             
+                <li>
+                <i class="icon iconfont">&#xe79f;</i>
+                    <div class="name">break</div>
+                    <div class="code">&amp;#xe79f;</div>
+                </li>
+            
+                <li>
+                <i class="icon iconfont">&#xe7a1;</i>
+                    <div class="name">cloud</div>
+                    <div class="code">&amp;#xe7a1;</div>
+                </li>
+            
+                <li>
+                <i class="icon iconfont">&#xe7a2;</i>
+                    <div class="name">sort</div>
+                    <div class="code">&amp;#xe7a2;</div>
+                </li>
+            
+                <li>
+                <i class="icon iconfont">&#xe7a3;</i>
+                    <div class="name">icon-tissue</div>
+                    <div class="code">&amp;#xe7a3;</div>
+                </li>
+            
         </ul>
         <h2 id="unicode-">unicode引用</h2>
         <hr>
