message新增延迟展示 优化无icon样式

--- a/src/js/component/message/index.less
+++ b/src/js/component/message/index.less
@@ -27,7 +27,9 @@
     &-icon {
       .dpr(@fs2);
       color: #459ef2;
-      margin-right: @u*10;
+      &::before{
+        margin-right: @u*10;
+      }
     }
     &-info {
       color: @info-c;
