--- a/src/less/global/var.less
+++ b/src/less/global/var.less
@@ -40,3 +40,5 @@
 @px-calendar: ~'@{prefix}-calendar'; // 日历
 @px-dropdown: ~'@{prefix}-dropdown'; // 下拉菜单
 @px-menu: ~'@{prefix}-menu'; // 导航菜单
+@px-floating: ~'@{prefix}-floating'; // 浮动
+
