--- a/src/less/global/var.less
+++ b/src/less/global/var.less
@@ -20,6 +20,13 @@
 // 图片路径
 @pimg:"~img";
 
+@index0: 0;
+@index1: 10;
+@index2: 100;
+@index3: 1000;
+@index4: 10000;
+@index5: 100000;
+@index6: 1000000;
 
 @px-alert: ~'@{prefix}-alert';
 @px-button: ~'@{prefix}-button';
