--- a/src/js/component/mask/index.less
+++ b/src/js/component/mask/index.less
@@ -21,7 +21,7 @@
     // justify-content: center;
     // align-items: center;
     background: rgba(55,55,55,.6);
-    z-index: 6000;
+    z-index: @index3 * 6;
     &__hide{
         display: none;
     }
