--- a/src/js/component/scroll/index.less
+++ b/src/js/component/scroll/index.less
@@ -23,7 +23,7 @@
         right: @u*5;
         top: 0;
         overflow: ~'hidden\0'; // ie Hack
-        z-index: 100;
+        z-index: @index2;
         &::-webkit-scrollbar{
             width: 8px;
         }
