--- a/src/js/component/tree/search/index.less
+++ b/src/js/component/tree/search/index.less
@@ -43,7 +43,7 @@
         height: ~'calc(100% - @{topH})';
         left: 0;
         width: 100%;
-        z-index: 100;
+        z-index: @index2;
         background: #fff;
         ul{
             margin: 0;
