--- a/src/js/component/loading/index.less
+++ b/src/js/component/loading/index.less
@@ -53,7 +53,7 @@
             position: absolute;
             left: 0;
             top: 0;
-            z-index: 1000;
+            z-index:  @index3;
             width: 100%;
             height: 100%;
             background: rgba(0, 0, 0, 0)
@@ -76,7 +76,7 @@
         top: 100 - 61.8%; // 完美黄金比例！！！！！鼓掌啪啪啪啪！！
         transform: translate(-50%, -50%);
         text-align: center;
-        z-index: 100;
+        z-index: @index2;
         >p{
             .slh();
             // width: 61.8%; // 又是完美的黄金比例！！！
