--- a/src/js/component/message/index.less
+++ b/src/js/component/message/index.less
@@ -9,7 +9,7 @@
     position: fixed;
     top: @u*16;
     left: 0;
-    z-index: 9000;
+    z-index: @index3 * 9;
     width: 100%;
     pointer-events: none;
     transition: all 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94);
