--- a/src/js/component/tree/index.less
+++ b/src/js/component/tree/index.less
@@ -20,7 +20,7 @@
     position: fixed;
     width: 100%;
     height: 100%;
-    z-index: 100000;
+    z-index: @index5;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -290,7 +290,7 @@
                         // top: 0;
                         width: 100%;
                         height: 32px;
-                        z-index: 0;
+                        z-index: @index0;
                     }
                 }
             }
@@ -307,7 +307,7 @@
                     // top: 0;
                     width: 100%;
                     height: 32px;
-                    z-index: 1;
+                    z-index: @index1;
                     cursor: not-allowed;
                 }
             }
@@ -329,7 +329,7 @@
         padding-right: @box-p;
         >*{
             position: relative;
-            z-index: 1;
+            z-index: @index1;
         }
         &-front {
             height:100%;
