--- a/src/js/component/watermark/index.less
+++ b/src/js/component/watermark/index.less
@@ -5,9 +5,9 @@
     position: absolute;
     top: 0;
     left: 0;
-    z-index: 0;
+    z-index: @index0;
     pointer-events: none;
     &~*{
-        z-index: 1;
+        z-index: @index1;
     }
 }
