--- a/src/js/component/tree/search/index.less
+++ b/src/js/component/tree/search/index.less
@@ -69,6 +69,8 @@
         }
         .tree-avatar {
           margin-right: @u*5;
+          border-radius: @u*3;
+          overflow: hidden;
         }
         &:hover {
           background: @ch1;
